--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.6.2",
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
