--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@resvg/resvg-js": "^2.6.2",
     "@types/node": "^22.14.1",
+    "jest-image-snapshot": "^6.4.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
   }
