--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
   "packageManager": "pnpm@10.9.0",
   "dependencies": {
     "@hpcc-js/wasm-graphviz": "^1.7.0",
+    "mnemonist": "^0.40.3",
     "ts-graphviz": "^2.1.6",
     "yaml": "^2.7.1",
-    "zod": "3.23.8"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@resvg/resvg-js": "^2.6.2",
